--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </p>
                         <p>
                             I began coding at the University of Notre Dame, where I studied mechanical engineering. My
-                            experience started with learning the basics of a now-archaic programming language called
+                            experience started with learning the basics of an archaic programming language called
                             Fortran. From there, pieces of coding began to slip into my coursework through MatLAB and
                             C, and it didn't take me long to desire to learn more.
                         </p>
