Finished basic pages...just styling left now

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
                         <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact</a>
+                        <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -47,32 +47,47 @@
                     <h3 id="secHead">Portfolio</h3>
                 </section>
                 <section class="row">
-                    <div class="col-md-4 portimg">
+                    <section class="col-md-12">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-4">
                                 <img src="assets/images/266.jpeg" alt="BM" height="200 " width="266">
-
-                                <img src="assets/images/267.jpeg" alt="BM" height="200 " width="266">
-
-                                <img src="assets/images/268.jpeg" alt="BM" height="200 " width="266">
+                                <h6 class = "imgOver">Project 1</h6>
                             </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4 portimg">
-                        <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-4">
                                 <img src="assets/images/269.jpeg" alt="BM" height="200 " width="266">
-                                <img src="assets/images/270.jpeg" alt="BM" height="200 " width="266">
+                                <h6 class = "imgOver">Project 4</h6>
+                            </div>
+                            <div class="col-md-4">
+
                             </div>
                         </div>
-                    </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="assets/images/267.jpeg" alt="BM" height="200 " width="266">
+                                <h6 class = "imgOver">Project 2</h6>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="assets/images/270.jpeg" alt="BM" height="200 " width="266">
+                                <h6 class = "imgOver">Project 5</h6>
+                            </div>
+                            <div class="col-md-4">
 
-                    <div class="row">
-                        <div class="col-md-4">
+                            </div>
+
                         </div>
-                    </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="assets/images/268.jpeg" alt="BM" height="200 " width="266">
+                                <h6 class = "imgOver">Project 3</h6>
+                            </div>
+                            <div class="col-md-4">
+
+                            </div>
+                            <div class="col-md-4">
+
+                            </div>
+                        </div>
+                    </section>
                 </section>
             </div>
 
