--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
                         <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact</a>
+                        <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +48,24 @@
                 </section>
                 <section id="bio" class="row">
                     <div class="col-md-12">
-
+                            <form>
+                                    <div class="form-group">
+                                            <label for="exampleName1">Name</label>
+                                            <input type="name" class="form-control" id="exampleName1" placeholder="Name">
+                                          </div>
+                                    <div class="form-group">
+                                      <label for="exampleInputEmail1">Email address</label>
+                                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    </div>
+                                   
+                                    <div class="form-group">
+                                      <label for="Message">Message</label>
+                                      <textarea class="form-control" id="Message" rows="8"></textarea>
+                                    </div>
+                                    
+                                    <button type="submit" class="btn btn-primary subcolor">Submit</button>
+                                  </form>
                     </div>
                 </section>
             </div>
