--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-7">
+
+            </div>
+            <div class="col-md-2">
 
                 <ul class="navbar-nav">
 
