--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,12 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-md-6">
-
+            <div class="col-md-7">
+                </div>
+            <div class="col-md-2">
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
@@ -31,6 +32,7 @@
                         <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
+        
             </div>
 
         </div>
