--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
 
                 </div>
-            <div class="col-md-2">
+            <div class="col-lg-2">
 
                 <ul class="navbar-nav">
 
@@ -41,16 +41,16 @@
 
     <div class="container">
         <section class="row">
-            <div class="col-md-1">
+            <div class="col-lg-1">
 
             </div>
 
-            <div id="content" class="col-md-10">
+            <div id="content" class="col-lg-10">
                 <section id="secHead" class="row">
                     <h3>Contact</h3>
                 </section>
                 <section id="bio" class="row">
-                    <div class="col-md-12">
+                    <div class="col-lg-12">
                             <form>
                                     <div class="form-group">
                                             <label for="exampleName1">Name</label>
@@ -73,7 +73,7 @@
                 </section>
             </div>
 
-            <div class="col-md-1">
+            <div class="col-lg-1">
 
             </div>
         </section>
