--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 ">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
             <div class="col-md-7">
@@ -40,20 +40,21 @@
     </nav>
 
     <div class="container">
+        <div class="col-12">
         <section class="row">
-            <div class="col-md-1">
+            <div class="col-lg-1 col-0">
 
             </div>
 
-            <div id="content" class="col-md-10">
+            <div id="content" class="col-lg-10 col-12">
                 <section class="row">
                     <h3 id="secHead">About Me</h3>
                 </section>
                 <section id="bio" class="row">
-                    <div class="col-md-4">
-                        <img src="assets/images/IMG_0345.jpg" alt="BM" height="200 " width="266">
+                    <div class="col-lg-6 col-12">
+                        <img src="assets/images/IMG_0345.jpg" alt="BM" height="width/1.33" width="100%" style="max-width:400px">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-lg-6 col-12">
 
                         <p>
                             Hello, my name is Patrick Gerspach and welcome to my portfolio site! I am an aspiring web
@@ -77,10 +78,11 @@
                 </section>
             </div>
 
-            <div class="col-md-1">
+            <div class="col-lg-1 col-0">
 
             </div>
         </section>
+    </div>
     </div>
 
 </body>
