--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
                 </div>
-            <div class="col-md-2">
+            <div class="col-lg-2">
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
@@ -40,52 +40,52 @@
 
     <div class="container">
         <section class="row">
-            <div class="col-md-1">
+            <div class="col-lg-1">
 
             </div>
 
-            <div id="content" class="col-md-10">
+            <div id="content" class="col-lg-10">
                 <section class="row">
                     <h3 id="secHead">Portfolio</h3>
                 </section>
                 <section class="row">
-                    <section class="col-md-12">
+                    <section class="col-lg-12">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <img src="assets/images/266.jpeg" alt="BM" height="200 " width="266">
                                 <h6 class = "imgOver">Project 1</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <img src="assets/images/269.jpeg" alt="BM" height="200 " width="266">
                                 <h6 class = "imgOver">Project 4</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
 
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <img src="assets/images/267.jpeg" alt="BM" height="200 " width="266">
                                 <h6 class = "imgOver">Project 2</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <img src="assets/images/270.jpeg" alt="BM" height="200 " width="266">
                                 <h6 class = "imgOver">Project 5</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
 
                             </div>
 
                         </div>
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
                                 <img src="assets/images/268.jpeg" alt="BM" height="200 " width="266">
                                 <h6 class = "imgOver">Project 3</h6>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
 
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-lg-4">
 
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                 </section>
             </div>
 
-            <div class="col-md-1">
+            <div class="col-lg-1">
 
             </div>
         </section>
