Just for good measure

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,12 @@
     </nav>
 
     <div class="container">
-        <section class="row">
+        <section class="row-justify-content-center">
             <div class="col-lg-1">
 
             </div>
 
-            <div id="content" class="col-lg-10">
+            <div id="content" class="col-lg-12">
                 <section class="row">
                     <h3 id="secHead">Portfolio</h3>
                 </section>
