--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 ">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7">  <!--Justify content in between?-->
 
-                </div>
+            </div>
             <div class="col-lg-2">
 
                 <ul class="navbar-nav">
@@ -40,12 +40,9 @@
     </nav>
 
     <div class="container">
-        <section class="row">
-            <div class="col-lg-1">
-
-            </div>
-
-            <div id="content" class="col-lg-10">
+        <section class="row-justify-content-center">
+           
+            <div id="content" class="col-lg-12">
                 <section id="secHead" class="row">
                     <h3>Contact</h3>
                 </section>
@@ -73,9 +70,7 @@
                 </section>
             </div>
 
-            <div class="col-lg-1">
-
-            </div>
+           
         </section>
     </div>
 
