--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="row">
-            <div class="col-md-3 ">
+            <div class="col-lg-3 ">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
 
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-2">
 
                 <ul class="navbar-nav">
 
@@ -40,13 +40,9 @@
     </nav>
 
     <div class="container">
-        <div class="col-12">
-        <section class="row">
-            <div class="col-lg-1 col-0">
-
-            </div>
-
-            <div id="content" class="col-lg-10 col-12">
+        <section class="row-justify-content-center">
+          
+            <div id="content" class="col-lg-12 col-12">
                 <section class="row">
                     <h3 id="secHead">About Me</h3>
                 </section>
@@ -78,9 +74,7 @@
                 </section>
             </div>
 
-            <div class="col-lg-1 col-0">
-
-            </div>
+            
         </section>
     </div>
     </div>
