--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title> PG Portfolio Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -12,17 +13,18 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="row">
-            <div class="col-lg-3 ">
+    <nav class="navbar navbar-expand bg-dark navbar-dark">
+        <div class="row navRow">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-12 nameColumn">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-lg-7">
+            <div class="col-xl-6 col-lg-5 col-md-2">
+                <!--Justify content in between?-->
 
             </div>
-            <div class="col-lg-2">
 
-                <ul class="navbar-nav">
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-12 col-xs-12">
+                <ul class="navbar-nav justify-content-center">
 
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">About</a>
@@ -39,18 +41,18 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container style="padding:0px"">
         <section class="row-justify-content-center">
-          
+
             <div id="content" class="col-lg-12 col-12">
                 <section class="row">
                     <h3 id="secHead">About Me</h3>
                 </section>
                 <section id="bio" class="row">
-                    <div class="col-lg-6 col-12">
-                        <img src="assets/images/IMG_0345.jpg" alt="BM" height="width/1.33" width="100%" style="max-width:400px">
+                    <div class="col-lg-5 col-12">
+                        <img src="assets/images/IMG_0345.jpg" alt="BM" height="width/1.33" width="100%" style="max-width:500px">
                     </div>
-                    <div class="col-lg-6 col-12">
+                    <div class="col-lg-7 col-12">
 
                         <p>
                             Hello, my name is Patrick Gerspach and welcome to my portfolio site! I am an aspiring web
@@ -74,7 +76,7 @@
                 </section>
             </div>
 
-            
+
         </section>
     </div>
     </div>
