--- a/portfolio.html
+++ b/portfolio.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="row">
-            <div class="col-lg-3">
+    <nav class="navbar navbar-expand bg-dark navbar-dark">
+        <div class="row navRow">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-12 nameColumn">
                 <h1 id="nameTop">Patrick Gerspach</h1>
             </div>
-            <div class="col-lg-7">
-                </div>
-            <div class="col-lg-2">
-                <ul class="navbar-nav">
+            <div class="col-xl-6 col-lg-5 col-md-2">
+                <!--Justify content in between?-->
+
+            </div>
+
+            <div class="col-xl-2 col-lg-3 col-md-4 col-12">
+                <ul class="navbar-nav justify-content-center">
 
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">About</a>
@@ -32,13 +35,12 @@
                         <a class="nav-link " href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
-        
             </div>
 
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="padding:0px">
         <section class="row-justify-content-center">
             <div class="col-lg-1">
 
@@ -51,26 +53,26 @@
                 <section class="row">
                     <section class="col-lg-12">
                         <div class="row">
-                            <div class="col-lg-4">
-                                <img src="assets/images/266.jpeg" alt="BM" height="200 " width="266">
-                                <h6 class = "imgOver">Project 1</h6>
+                            <div class="col-lg-4 col-md-6 col-12 portImg">
+                                <img src="assets/images/266.jpeg" alt="BM" height="width/1.33" width="100%">
+                                <h6 class="imgOver">Project 1</h6>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="assets/images/269.jpeg" alt="BM" height="200 " width="266">
-                                <h6 class = "imgOver">Project 4</h6>
+                            <div class="col-lg-4 col-md-6 col-12 portImg">
+                                <img src="assets/images/269.jpeg" alt="BM" height="width/1.33" width="100%">
+                                <h6 class="imgOver">Project 4</h6>
                             </div>
                             <div class="col-lg-4">
 
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4">
-                                <img src="assets/images/267.jpeg" alt="BM" height="200 " width="266">
-                                <h6 class = "imgOver">Project 2</h6>
+                            <div class="col-lg-4 col-md-6 col-12 portImg">
+                                <img src="assets/images/267.jpeg" alt="BM" height="width/1.33" width="100%">
+                                <h6 class="imgOver">Project 2</h6>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="assets/images/270.jpeg" alt="BM" height="200 " width="266">
-                                <h6 class = "imgOver">Project 5</h6>
+                            <div class="col-lg-4 col-md-6 col-12 portImg">
+                                <img src="assets/images/270.jpeg" alt="BM" height="width/1.33" width="100%">
+                                <h6 class="imgOver">Project 5</h6>
                             </div>
                             <div class="col-lg-4">
 
@@ -78,9 +80,9 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-lg-4">
-                                <img src="assets/images/268.jpeg" alt="BM" height="200 " width="266">
-                                <h6 class = "imgOver">Project 3</h6>
+                            <div class="col-lg-4 col-md-6 col-12 portImg">
+                                <img src="assets/images/268.jpeg" alt="BM" height="width/1.33" width="100%">
+                                <h6 class="imgOver">Project 3</h6>
                             </div>
                             <div class="col-lg-4">
 
