padding removed on container

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container style="padding:0px"">
+    <div class="container" style= "padding:0px">
         <section class="row-justify-content-center">
 
             <div id="content" class="col-lg-12 col-12">
