--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style= "padding:0px">
         <section class="row-justify-content-center">
 
             <div id="content" class="col-lg-12">
