--- a/portfolio.html
+++ b/portfolio.html
@@ -53,16 +53,16 @@
                 <section class="row">
 
                     <div class="col-lg-4 col-md-6 col-12 portImg">
-                        <img src="assets/images/266.jpeg" alt="BM" height="width/1.33" width="100%">
-                        <h6 class="imgOver"><a class="portLink" href="#">Project 1</a></h6>
+                        <img src="assets/images/Farm-Back.jpg" alt="BM" height="width/1.33" width="100%">
+                        <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/Word-Guess-Game/"target="_blank">Old MacDonald's Farm</a></h6>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 portImg">
-                        <img src="assets/images/269.jpeg" alt="BM" height="width/1.33" width="100%">
-                        <h6 class="imgOver"><a class="portLink" href="#">Project 2</a></h6>
+                        <img src="assets/images/mordor.jpg" alt="BM" height="width/1.33" width="100%">
+                        <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/unit-4-game/"target="_blank">Lord of the Rings RPG</a></h6>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 portImg">
-                        <img src="assets/images/268.jpeg" alt="BM" height="width/1.33" width="100%">
-                        <h6 class="imgOver"><a class="portLink" href="#">Project 3</a></h6>
+                        <img src="assets/images/sydney.jpg" alt="BM" height="width/1.33" width="100%">
+                        <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/TriviaGame/"target="_blank">Trivia Game</a></h6>
                     </div>
 
 
