--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Patrick's Portfolio!</title>
 
 </head>
 
@@ -65,15 +65,15 @@
                         <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/TriviaGame/"target="_blank">Trivia Game</a></h6>
                     </div>
 
-
                     <div class="col-lg-4 col-md-6 col-12 portImg">
+                            <img src="assets/images/giphy.png" alt="BM" height="width/1.33" width="100%">
+                            <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/GifTastic/"target="_blank">GifTastic</a></h6>
+                        </div>
+                    <!-- <!-- <div class="col-lg-4 col-md-6 col-12 portImg">
                         <img src="assets/images/267.jpeg" alt="BM" height="width/1.33" width="100%">
                         <h6 class="imgOver"><a class="portLink" href="#">Project 4</a></h6>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 portImg">
-                        <img src="assets/images/270.jpeg" alt="BM" height="width/1.33" width="100%">
-                        <h6 class="imgOver"><a class="portLink" href="#">Project 5</a></h6>
-                    </div>
+                    </div> -->
+                    
 
                     <div class="col-lg-0 col-md-6 col-12 portImg">
 
