--- a/portfolio.html
+++ b/portfolio.html
@@ -69,10 +69,10 @@
                             <img src="assets/images/giphy.png" alt="BM" height="width/1.33" width="100%">
                             <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/GifTastic/"target="_blank">GifTastic</a></h6>
                         </div>
-                    <!-- <!-- <div class="col-lg-4 col-md-6 col-12 portImg">
-                        <img src="assets/images/267.jpeg" alt="BM" height="width/1.33" width="100%">
-                        <h6 class="imgOver"><a class="portLink" href="#">Project 4</a></h6>
-                    </div> -->
+                  <div class="col-lg-4 col-md-6 col-12 portImg">
+                        <img src="assets/images/rps.png" alt="BM" height="width/1.33" width="100%">
+                        <h6 class="imgOver"><a class="portLink" href="https://pgerspach.github.io/RPS-Multiplayer/">RPS-Multiplayer</a></h6>
+                    </div> 
                     
 
                     <div class="col-lg-0 col-md-6 col-12 portImg">
